--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN=
-CRYPTOBOT_TOKEN=
+BOT_TOKEN=7847197165:AAGEzYCC1GmMVoxhM804vPXs5LyNPuneCeU
+CRYPTOBOT_TOKEN=365885:AAkJPy2Gr5d0sIUAGWm1HokYfpOoGGwnlyD
